--- a/Healthtechbd/ActiveWindow.xaml
+++ b/Healthtechbd/ActiveWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Healthtechbd"
         mc:Ignorable="d"
-        Title="ApplicationActiveWindow" WindowState="Maximized" Height="600" Width="1200" Closed="Window_Closed" WindowStartupLocation="CenterScreen">
+        Title="ApplicationActiveWindow" Icon="images/logo.png" WindowState="Maximized" Height="600" Width="1200" Closed="Window_Closed" WindowStartupLocation="CenterScreen">
 
     <Grid>
         <Grid.Background>
