--- a/Healthtechbd/AddPatient.xaml
+++ b/Healthtechbd/AddPatient.xaml
@@ -85,8 +85,8 @@
         <Grid Height="60" Background="#E3E7EB" Margin="20">
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button x:Name="CancelAddPatient" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddPatient_Click" />
-                <Button x:Name="SubmitAddPatient" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitAddPatient_Click" />
+                <Button ToolTip="Cancel" x:Name="CancelAddPatient" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddPatient_Click" />
+                <Button ToolTip="Submit" x:Name="SubmitAddPatient" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitAddPatient_Click" />
             </StackPanel>
             
         </Grid>
