--- a/Healthtechbd/AdminPanelWindow.xaml
+++ b/Healthtechbd/AdminPanelWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:Healthtechbd"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Admin Panel" Height="650" Width="1200" WindowState="Maximized" WindowStartupLocation="CenterScreen" Closed="Window_Closed">
+        Title="Admin Panel" Icon="images/logo.png" Height="650" Width="1200" WindowState="Maximized" WindowStartupLocation="CenterScreen" Closed="Window_Closed">
 
     <Window.Resources>
 
