--- a/Healthtechbd/ChangePassword.xaml
+++ b/Healthtechbd/ChangePassword.xaml
@@ -69,8 +69,8 @@
         <Grid Height="60" Background="#E3E7EB" Margin="20">
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button x:Name="CancelChangePassword" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelChangePassword_Click" />
-                <Button x:Name="SubmitChangePassword" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitChangePassword_Click" />
+                <Button ToolTip="Cancel" x:Name="CancelChangePassword" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelChangePassword_Click" />
+                <Button ToolTip="Submit" x:Name="SubmitChangePassword" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitChangePassword_Click" />
             </StackPanel>
 
         </Grid>
