--- a/Healthtechbd/EditMedicine.xaml
+++ b/Healthtechbd/EditMedicine.xaml
@@ -59,8 +59,8 @@
         <Grid Height="60" Background="#E3E7EB" Margin="20">
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button x:Name="CancelEditMedicine" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelEditMedicine_Click" />
-                <Button x:Name="SubmitUpdateMedicine" Content="UPDATE" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitUpdateMedicine_Click"/>
+                <Button ToolTip="Cancel" x:Name="CancelEditMedicine" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelEditMedicine_Click" />
+                <Button ToolTip="Update" x:Name="SubmitUpdateMedicine" Content="UPDATE" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitUpdateMedicine_Click"/>
             </StackPanel>
 
         </Grid>
