--- a/Healthtechbd/EditTest.xaml
+++ b/Healthtechbd/EditTest.xaml
@@ -51,8 +51,8 @@
         <Grid Height="60" Background="#E3E7EB" Margin="20">
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button x:Name="CancelEditTest" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelEditTest_Click" />
-                <Button x:Name="SubmitUpdateTest" Content="UPDATE" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitUpdateTest_Click" />
+                <Button ToolTip="Cancel" x:Name="CancelEditTest" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelEditTest_Click" />
+                <Button ToolTip="Update" x:Name="SubmitUpdateTest" Content="UPDATE" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitUpdateTest_Click" />
             </StackPanel>
 
         </Grid>
