--- a/Healthtechbd/Patients.xaml
+++ b/Healthtechbd/Patients.xaml
@@ -17,7 +17,7 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" Text="PATIENTS" Style="{StaticResource PageHeading}"/>
-            <Button x:Name="ButtonAddPatient" Grid.Column="1" Margin="0 0 20 0" Content="ADD PATIENT" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonAddPatient_Click" />
+            <Button ToolTip="Add Patient" x:Name="ButtonAddPatient" Grid.Column="1" Margin="0 0 20 0" Content="ADD PATIENT" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonAddPatient_Click" />
         </Grid>
 
         <!--Page Heading Bottom-->
@@ -34,10 +34,10 @@
                         </Grid.ColumnDefinitions>
 
                         <TextBox x:Name="searchField" Style="{StaticResource SearchBox}" Grid.Column="0" Text=""/>
-                        <Button x:Name="btnSearch" Style="{StaticResource SearchButton}" Grid.Column="1" Margin="0 0 10 0" Click="btnSearch_Click">
+                        <Button ToolTip="Search" x:Name="btnSearch" Style="{StaticResource SearchButton}" Grid.Column="1" Margin="0 0 10 0" Click="btnSearch_Click">
                             <materialDesign:PackIcon Kind="DatabaseSearch"/>
                         </Button>
-                        <Button x:Name="btnReset" Grid.Column="2" Style="{StaticResource SearchButton}" Click="btnReset_Click">Reset</Button>
+                        <Button ToolTip="Reset" x:Name="btnReset" Grid.Column="2" Style="{StaticResource SearchButton}" Click="btnReset_Click">Reset</Button>
                     </Grid>
                 </Grid>
 
@@ -56,7 +56,7 @@
                                     <DataGridTemplateColumn Header="Action">
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
-                                                <Button x:Name="btnEditPatientRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnEditPatientRow_Click" >
+                                                <Button ToolTip="Edit" x:Name="btnEditPatientRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnEditPatientRow_Click" >
                                                     <materialDesign:PackIcon Kind="TableEdit"/>
                                                 </Button>
                                             </DataTemplate>
@@ -66,7 +66,7 @@
                                     <DataGridTemplateColumn>
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
-                                                <Button x:Name="btnViewPatientPrescription" Background="#3CC2BB" Height="20" Width="30"  Padding="0" Click="btnViewPatientPrescription_Click" >
+                                                <Button ToolTip="View Prescription" x:Name="btnViewPatientPrescription" Background="#3CC2BB" Height="20" Width="30"  Padding="0" Click="btnViewPatientPrescription_Click" >
                                                     <materialDesign:PackIcon Kind="Teamviewer"/>
                                                 </Button>
                                             </DataTemplate>
@@ -76,7 +76,7 @@
                                     <!--<DataGridTemplateColumn>
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
-                                                <Button x:Name="btnDeletePatientRow" Background="#3CC2BB" Height="20" Width="30"  Padding="0" Click="btnDeletePatientRow_Click" >
+                                                <Button ToolTip="Delete" x:Name="btnDeletePatientRow" Background="#3CC2BB" Height="20" Width="30"  Padding="0" Click="btnDeletePatientRow_Click" >
                                                     <materialDesign:PackIcon Kind="Delete"/>
                                                 </Button>
                                             </DataTemplate>
