--- a/Healthtechbd/ResetPasswordWindow.xaml
+++ b/Healthtechbd/ResetPasswordWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Healthtechbd"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="ResetPasswordWindow" WindowState="Maximized" Height="600" Width="1200" WindowStartupLocation="CenterScreen" Closed="Window_Closed" >
+        Title="ResetPasswordWindow" Icon="images/logo.png" WindowState="Maximized" Height="600" Width="1200" WindowStartupLocation="CenterScreen" Closed="Window_Closed" >
 
 
     <Grid>
