--- a/Healthtechbd/prescriptionTemplates/CustomTemplate.xaml
+++ b/Healthtechbd/prescriptionTemplates/CustomTemplate.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Healthtechbd.prescriptionTemplates"
       mc:Ignorable="d" 
-      d:DesignHeight="5500" d:DesignWidth="800"
+      d:DesignHeight="5500" d:DesignWidth="900"
       Title="CustomTemplate">
 
     <ScrollViewer VerticalScrollBarVisibility="Auto">
@@ -20,8 +20,8 @@
                     </StackPanel>
                 </Border>
 
-                <Button x:Name="ButtonPrintPrescription" Margin="0,13,184,12" Content="PRINT" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonPrintPrescription_Click"/>
-                <Button x:Name="ButtonEditPrescription" Content="EDIT PRESCRIPTION" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="36"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,12,22,12" Click="ButtonEditPrescription_Click"/>
+                <Button ToolTip="Print Prescription" x:Name="ButtonPrintPrescription" Margin="0,13,184,12" Content="PRINT" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonPrintPrescription_Click"/>
+                <Button ToolTip="Edit Prescription" x:Name="ButtonEditPrescription" Content="EDIT PRESCRIPTION" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="36"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,12,22,12" Click="ButtonEditPrescription_Click"/>
             </Grid>
 
             <Grid MinHeight="60" Margin="0 10 0 0" Background="#fff" VerticalAlignment="Center">
@@ -35,10 +35,10 @@
             </Grid>
             
             <!--Page Heading Bottom-->
-            <Border  Width="740" Margin="20">
+            <Border Width="810" Margin="20">
                 <StackPanel x:Name="PrintArea">
-
-                    <Grid Background="#fff">
+                    <Border Padding="50 80" Background="#fff">
+                        <Grid Background="#fff">
 
                         <Grid.RowDefinitions>
                             <RowDefinition></RowDefinition>
@@ -201,24 +201,9 @@
                                     <Grid>
                                         <StackPanel x:Name="PrescriptioMedicines" Margin="5 0">
 
-                                            <!--<StackPanel Orientation="Horizontal">
+                                            <!--<StackPanel>
                                                 <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Margin="0 0 3 0" Text="Premil 2 Tablet :"/>
                                                 <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Text="( 1-1-1 )"/>
-                                            </StackPanel>
-
-                                            <StackPanel Orientation="Horizontal">
-                                                <TextBlock FontWeight="Normal" Margin="0 0 3 0" Style="{StaticResource Level}" Text="Igen Eye Drops :"/>
-                                                <TextBlock FontWeight="Normal"  Style="{StaticResource Level}" Text=" ( 1+1+1 )"/>
-                                            </StackPanel>
-
-                                            <StackPanel Orientation="Horizontal">
-                                                <TextBlock FontWeight="Normal" Margin="0 0 3 0" Style="{StaticResource Level}" Text="Skinabin Cream :"/>
-                                                <TextBlock FontWeight="Normal" Style="{StaticResource Level}" Text="( 1-1-1 )"/>
-                                            </StackPanel>
-
-                                            <StackPanel Orientation="Horizontal">
-                                                <TextBlock FontWeight="Normal" Margin="0 0 3 0" Style="{StaticResource Level}" Text="Aciflox 200 Tablet :"/>
-                                                <TextBlock FontWeight="Normal"  Style="{StaticResource Level}" Text=" ( 1+1+1 )"/>
                                             </StackPanel>-->
 
                                         </StackPanel>
@@ -294,6 +279,8 @@
                             </Grid>
                         </Border>
                     </Grid>
+                    </Border>
+                    
 
                 </StackPanel>
             </Border>
