--- a/Healthtechbd/prescriptionTemplates/StandardTemplate.xaml
+++ b/Healthtechbd/prescriptionTemplates/StandardTemplate.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Healthtechbd.prescriptionTemplates"
       mc:Ignorable="d" 
-      d:DesignHeight="5000" d:DesignWidth="800"
+      d:DesignHeight="5000" d:DesignWidth="900"
       Title="StandardTemplate">
 
     <Page.Resources>
@@ -25,8 +25,8 @@
                     </StackPanel>
                 </Border>
 
-                <Button x:Name="ButtonPrintPrescription" Margin="0,13,184,12" Content="PRINT" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonPrintPrescription_Click" />
-                <Button x:Name="ButtonEditPrescription" Content="EDIT PRESCRIPTION" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="36"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,12,22,12" Click="ButtonEditPrescription_Click"/>
+                <Button  x:Name="ButtonPrintPrescription" Margin="0,13,184,12" Content="PRINT" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonPrintPrescription_Click" />
+                <Button  x:Name="ButtonEditPrescription" Content="EDIT PRESCRIPTION" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="36"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,12,22,12" Click="ButtonEditPrescription_Click"/>
             </Grid>
 
             <Grid MinHeight="60" Margin="0 10 0 0" Background="#fff" VerticalAlignment="Center">
@@ -40,12 +40,12 @@
             </Grid>
 
             <!--Page Heading Bottom-->
-            <Border Width="740" Margin="20">
+            <Border Width="810" Margin="20">
                 <StackPanel x:Name="PrintArea">
+                    <Border Padding="50 80" Background="#fff">
+                        <Grid Background="#fff">
 
-                    <Grid Background="#fff">
-
-                        <Grid.RowDefinitions>
+                            <Grid.RowDefinitions>
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
@@ -214,6 +214,8 @@
                             </Grid>
                         </Border>
                     </Grid>
+                    </Border>
+                   
 
                 </StackPanel>
             </Border>
